# water-reminder

./: ADIM_ADIM_KILAVUZ.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ios.yml
ios/CreatineWaterReminder/: NotificationBridge.swift
src/creatine/: __init__.py  __main__.py  app.py  ios_notifications.py  notifications.py  storage.py  workouts.py
